HLT-3805: fixed performance issue for the scrollbar. 100% height degrades performance significantly so calculated on the fly instead

--- a/src/main/webapp/bundles/health_v4/less/insurance_prefs/benefitsXSOverlay.less
+++ b/src/main/webapp/bundles/health_v4/less/insurance_prefs/benefitsXSOverlay.less
@@ -22,7 +22,7 @@ body.health {
 		.toggleBar {
 			background: @theme-tertiary;
 			width: 20px;
-			height: 100%;
+			height: 1600px;
 			position: absolute;
 			z-index: 100;
 			right: -10px;
@@ -43,11 +43,13 @@ body.health {
 					.rotateEl(90deg);
 					width: 230px;
 					left: -86px;
+					position:absolute;
 				}
 
 				&.extras {
 					.rotateEl(-90deg);
 					right: -80px;
+					position:absolute;
 				}
 
 				span {
