--- a/src/main/webapp/bundles/health_v4/less/moreinfo/moreInfo.less
+++ b/src/main/webapp/bundles/health_v4/less/moreinfo/moreInfo.less
@@ -341,11 +341,12 @@
             .rotateEl(90deg);
             left: -26px;
             width: 120px;
+            position:absolute;
           }
 
           &.extras {
             .rotateEl(-90deg);
-
+            position:absolute;
           }
 
           span {
